--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jets": "^0.15.0",
+    "supertest": "^7.0.0"
+  }
 }
