--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-jwt": "^1.2.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.32.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
