--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.32.13",
     "web-vitals": "^2.1.4"
   },
