--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
